[gd_scene load_steps=13 format=4 uid="uid://bfddb7ffbd31"]

[ext_resource type="Script" uid="uid://bn5j7ugdhh5of" path="res://script/flora's_sky_high_death_screen.gd" id="1_pdt1u"]
[ext_resource type="Texture2D" uid="uid://d0eaivl1psmhn" path="res://assets/sprites/sprites/BUTTONS/Game over.png" id="2_153co"]
[ext_resource type="Texture2D" uid="uid://ubrtj7hs848b" path="res://assets/sprites/sprites/BUTTONS/Game over hover.png" id="3_hlhna"]
[ext_resource type="Texture2D" uid="uid://dl8fs7d20bvl" path="res://assets/sprites/sprites/BUTTONS/Go_Back.png" id="4_v47n4"]
[ext_resource type="Texture2D" uid="uid://boqv7aiafy7od" path="res://assets/sprites/sprites/BUTTONS/Go_Back_hover.png" id="5_df2q5"]
[ext_resource type="Texture2D" uid="uid://dvq3lyd46t8r7" path="res://assets/sprites/sprites/BUTTONS/RETRY.png" id="6_rr8qp"]
[ext_resource type="Texture2D" uid="uid://bdr50q07wh71q" path="res://assets/sprites/sprites/BUTTONS/RETRY hover.png" id="7_wj2mb"]
[ext_resource type="Texture2D" uid="uid://bheejfcror6km" path="res://assets/sprites/sprites/paka's petting sim/ground.png" id="8_jr4mx"]
[ext_resource type="Script" uid="uid://3inedt7vwkw7" path="res://script/camera_2d.gd" id="9_ll8ja"]
[ext_resource type="PackedScene" uid="uid://b83hwoltxpxrq" path="res://scenes/fade_transition.tscn" id="10_13gns"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ddx0g"]
texture = ExtResource("8_jr4mx")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_fe080"]
sources/0 = SubResource("TileSetAtlasSource_ddx0g")

[node name="Flora\'sSkyHighDeathScreen" type="Node2D"]
script = ExtResource("1_pdt1u")

[node name="ButtonControl" type="Node2D" parent="."]

[node name="GameOver" type="TextureButton" parent="ButtonControl"]
offset_left = -29.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -9.0
texture_normal = ExtResource("2_153co")
texture_hover = ExtResource("3_hlhna")

[node name="GoBack" type="TextureButton" parent="ButtonControl"]
offset_left = -61.0
offset_top = 7.0
offset_right = 3.0
offset_bottom = 23.0
texture_normal = ExtResource("4_v47n4")
texture_hover = ExtResource("5_df2q5")

[node name="Retry" type="TextureButton" parent="ButtonControl"]
offset_left = 2.0
offset_top = 7.0
offset_right = 66.0
offset_bottom = 23.0
texture_normal = ExtResource("6_rr8qp")
texture_hover = ExtResource("7_wj2mb")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -3
tile_map_data = PackedByteArray("AAD5//z/AAAEAAAAAAD5//3/AAAEAAAAAAD5//7/AAAEAAAAAAD6//z/AAAEAAAAAAD6//3/AAAEAAAAAAD6//7/AAAEAAAAAAD7//z/AAAEAAAAAAD7//3/AAAEAAAAAAD7//7/AAAEAAAAAAD8//z/AAAEAAAAAAD8//3/AAAEAAAAAAD8//7/AAAEAAAAAAD9//z/AAAEAAAAAAD9//3/AAAEAAAAAAD9//7/AAAEAAAAAAD+//z/AAAEAAAAAAD+//3/AAAEAAAAAAD+//7/AAAEAAAAAAD///z/AAAEAAAAAAD///3/AAAEAAAAAAD///7/AAAEAAAAAAAAAPz/AAAEAAAAAAAAAP3/AAAEAAAAAAAAAP7/AAAEAAAAAAABAPz/AAAEAAAAAAABAP3/AAAEAAAAAAABAP7/AAAEAAAAAAACAPz/AAAEAAAAAAACAP3/AAAEAAAAAAACAP7/AAAEAAAAAAADAPz/AAAEAAAAAAADAP3/AAAEAAAAAAADAP7/AAAEAAAAAAAEAPz/AAAEAAAAAAAEAP3/AAAEAAAAAAAEAP7/AAAEAAAAAAAFAPz/AAAEAAAAAAAFAP3/AAAEAAAAAAAFAP7/AAAEAAAAAAAGAPz/AAAEAAAAAAAGAP3/AAAEAAAAAAAGAP7/AAAEAAAAAAD5////AAAFAAAAAAD6////AAAFAAAAAAD7////AAAFAAAAAAD8////AAAFAAAAAAD9////AAAFAAAAAAD+////AAAFAAAAAAD/////AAAFAAAAAAAAAP//AAAFAAAAAAABAP//AAAFAAAAAAACAP//AAAFAAAAAAADAP//AAAFAAAAAAAEAP//AAAFAAAAAAAFAP//AAAFAAAAAAAGAP//AAAFAAAAAAD5/wAAAAAFAAEAAAD5/wEAAAAFAAEAAAD5/wIAAAAFAAEAAAD6/wAAAAAFAAEAAAD6/wEAAAAFAAEAAAD6/wIAAAAFAAEAAAD7/wAAAAAFAAEAAAD7/wEAAAAFAAEAAAD7/wIAAAAFAAEAAAD8/wAAAAAFAAEAAAD8/wEAAAAFAAEAAAD8/wIAAAAFAAEAAAD9/wAAAAAFAAEAAAD9/wEAAAAFAAEAAAD9/wIAAAAFAAEAAAD+/wAAAAAFAAEAAAD+/wEAAAAFAAEAAAD+/wIAAAAFAAEAAAD//wAAAAAFAAEAAAD//wEAAAAFAAEAAAD//wIAAAAFAAEAAAAAAAAAAAAFAAEAAAAAAAEAAAAFAAEAAAAAAAIAAAAFAAEAAAABAAAAAAAFAAEAAAABAAEAAAAFAAEAAAABAAIAAAAFAAEAAAACAAAAAAAFAAEAAAACAAEAAAAFAAEAAAACAAIAAAAFAAEAAAADAAAAAAAFAAEAAAADAAEAAAAFAAEAAAADAAIAAAAFAAEAAAAEAAAAAAAFAAEAAAAEAAEAAAAFAAEAAAAEAAIAAAAFAAEAAAAFAAAAAAAFAAEAAAAFAAEAAAAFAAEAAAAFAAIAAAAFAAEAAAAGAAAAAAAFAAEAAAAGAAEAAAAFAAEAAAAGAAIAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_fe080")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(9, 9)
limit_left = -77
limit_top = -44
limit_right = 77
limit_bottom = 44
position_smoothing_enabled = true
position_smoothing_speed = 1.0
script = ExtResource("9_ll8ja")

[node name="fade_transition" parent="." instance=ExtResource("10_13gns")]

[node name="FadeTimer" type="Timer" parent="fade_transition"]
one_shot = true

[connection signal="pressed" from="ButtonControl/GoBack" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="ButtonControl/Retry" to="." method="_on_retry_pressed"]
[connection signal="timeout" from="fade_transition/FadeTimer" to="." method="_on_fade_timer_timeout"]
